refactor: adopt Java 9/10 idioms in internal classes
- Diamond operator on the four anonymous ClassValue subclasses
  (ClassMetadataCache, FixedFormatManagerImpl, AbstractPatternFormatter).
- ByTypeFormatter.KNOWN_FORMATTERS: mutable HashMap + static-init block
  replaced with immutable Map.ofEntries.
- ClassMetadataCache.build returns List.copyOf instead of an
  unmodifiableList wrapper (compact immutable list, iterated on every
  load/export). ReadResult's per-call unmodifiable views left as-is.
- appendData takes char/int instead of Character/Integer, removing
  per-field autoboxing of the record padding char in the export loop.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>